<resources>
    <string name="app_name">PlayGround</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="reenter_your_password">Re-Type your Password</string>
    <string name="home">HOME</string>
    <string name="messages">MESSAGES</string>
    <string name="phone_number">Phone Number</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="edit">Edit</string>
    <string name="log_out">Log out</string>
    <string name="you_haven_t_created_any_activites">You haven\'t created any Activites</string>
    <string name="add_new_activity">Add new Activity</string>
    <string name="sorry_there_is_no_data_available_right_now">sorry, there is no data available right now</string>
    <string name="title">Title</string>
    <string name="new_activity">New Activity</string>
    <string name="select_location">Select Location</string>
    <string name="description">Description</string>
    <string name="instructions">Instructions</string>
    <string name="number_of_players_required">Number of players required</string>
    <string name="total_number_of_players_required">Total number of players required</string>
    <string name="submit">SUBMIT</string>
    <string name="select_sports">Select Sports</string>
    <string name="pals">PALS</string>
    <string name="_0">0</string>
    <string name="events">EVENTS</string>
    <string name="points">POINTS</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="location">LOCATION</string>
    <string name="sport">SPORT</string>
    <string name="enroll">ENROLL</string>
    <string name="other_information">Other Information</string>
    <string name="no_players_yet">No players yet</string>
    <string name="host">HOST</string>
    <string name="accept">Accept</string>
    <string name="no_enrolled_events_available">No Enrolled Events available</string>
    <string name="request">Request</string>
    <string name="currently_there_is_no_notices_available">Currently there is no notices Available</string>
    <string name="profile">Profile</string>
    <string name="game">GAME</string>
    <string name="player">PLAYER</string>
    <string name="select_date">Select Date</string>
    <string name="time">time</string>
    <string name="date">date</string>
    <string name="title1">TITLE</string>
    <string name="location1">Location</string>
    <string name="password_constraints">password must have 8–20 chars,at least 1 uppercase,1 number,1 special char,1 lower case,no space</string>
    <string name="player_count_caution">Please note that you can only increase the number of players required for the game. Once incremented, the count cannot be decreased after updation. Be sure to set the value accordingly before confirming</string>
    <string name="game_history_empty_caption_for_the_player">There is no game history available for the player</string>
    <string name="feeds">Feeds</string>
    <string name="body_of_the_the_card">body of the the card</string>
    <string name="title_activity_image_view">ImageViewActivity</string>
    <string name="notice_to_leave_game">Important Notice: As the event date approaches, please note that you will not be able to leave the game within the last 3 days prior to the event. We request you to make a commitment to attend and participate in the game.</string>
    >
</resources>