<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/solid_white_background"
    android:padding="40dp"
    tools:context=".view.auth.signup.SignUpFragment">
    <TextView
        android:id="@+id/signup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="30sp"

        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/usernamae_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:counterEnabled="true"
    app:counterMaxLength="30"
    app:layout_constraintTop_toBottomOf="@id/signup_title"
    app:layout_constraintStart_toStartOf="@id/signup_title"
    style="@style/MyEditTextBackground">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username_for_signup"
        android:layout_marginTop="20dp"
        android:maxLength="30"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:hint="@string/username"
        />
</com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/usernamae_layout"
        app:layout_constraintStart_toStartOf="@id/signup_title"
        android:hint="@string/name"
        style="@style/MyEditTextBackground">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_marginTop="20dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/black"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phonenumber_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name_layout"
        app:layout_constraintStart_toStartOf="@id/signup_title"
        android:hint="@string/phone_number"
        style="@style/MyEditTextBackground"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number_for_signup"
            android:layout_marginTop="20dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textColor="@color/black"

            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        android:hint="@string/enter_your_password"
        app:layout_constraintStart_toStartOf="@id/phonenumber_layout"
        app:layout_constraintTop_toBottomOf="@id/phonenumber_layout"
        style="@style/MyEditTextBackground"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_for_signup"
            android:layout_marginTop="20dp"
            android:layout_width="250dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:inputType="textPassword"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/passsword_hint"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:text="password must have 8–20 chars,at least 1 uppercase,1 number,1 special char,1 lower case"
        android:textSize="12sp"
        android:textColor="@color/red"
        android:layout_marginStart="5dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/password_layout"
        app:layout_constraintStart_toStartOf="@id/password_layout"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reentered_password_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/reenter_your_password"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="@id/password_layout"
        app:layout_constraintTop_toBottomOf="@id/passsword_hint"
        style="@style/MyEditTextBackground"
        >
        <EditText
            android:id="@+id/password_reenter_field_for_signup"
            android:layout_marginTop="20dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="textPassword"


            />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reentered_password_layout"
        />


</androidx.constraintlayout.widget.ConstraintLayout>