<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/solid_white_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="40dp"
    tools:context=".view.auth.login.LoginFragment">



    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="30sp"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernamae_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_title"
        app:layout_constraintStart_toStartOf="@id/login_title"
        android:hint="@string/username"
        style="@style/MyEditTextBackground"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_for_login"
            android:layout_marginTop="20dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:textColorHint="@color/material_dynamic_neutral80"

            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="wrap_content"
        app:endIconMode="password_toggle"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintStart_toStartOf="@id/usernamae_layout"
        app:layout_constraintTop_toBottomOf="@id/usernamae_layout"
        style="@style/MyEditTextBackground"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_for_login"
            android:layout_marginTop="20dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="textPassword"

            />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/password_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>