<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brightblue"
    tools:context=".view.mainscreen.activityhandler.NewSportActivityCreaterActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">
    <include
        android:id="@+id/toolbar"
        layout = "@layout/toolbartransparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout

        android:id="@+id/inputcontentlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@drawable/activity_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/thumbnail"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/add_image_ic"

            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:counterEnabled="true"
            app:counterMaxLength="25"


            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:maxLength="25"
                android:hint="@string/title"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/locationfieldoutline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/activity_title"
            app:layout_constraintStart_toStartOf="@id/activity_title"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/locationField"
                android:hint="@string/select_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sportsfieldoutline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/locationfieldoutline"
            app:layout_constraintStart_toStartOf="@id/locationfieldoutline"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/sportsfield"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/select_sports" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/event_date"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:id="@+id/date_picker"
                android:layout_width="0dp"
                android:padding="10dp"
                android:gravity="center"
                android:text="Select Date"
                android:textColor="@color/black"
                android:layout_height="match_parent"
                android:background="@drawable/date_time_btn_bg"
                app:drawableEndCompat="@drawable/calender"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/time_picker"
                />

            <TextView
                android:id="@+id/time_picker"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:text="Select Time"
                android:textColor="@color/black"
                android:gravity="center"
                android:background="@drawable/date_time_btn_bg"
                app:drawableEndCompat="@drawable/date_and_time_ic"
                app:drawableTint="@color/gray50"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/date_picker"
                app:layout_constraintEnd_toEndOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_description"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/event_date"
                app:layout_constraintStart_toStartOf="@id/event_date"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:hint="@string/description"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_otherInstruciton"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/activity_description"
                app:layout_constraintStart_toStartOf="parent"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:hint="@string/instructions"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/noOfPlayersRequired"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/total_number_of_players_required"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    />
            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>

    <androidx.constraintlayout.utils.widget.MotionButton
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/inputcontentlayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_bg"
        android:text="@string/submit"

        />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>