<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="2dp"
    android:layout_margin="2dp"
    app:cardBackgroundColor="@color/aliceBlue"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <TextView-->
<!--        android:id="@+id/activity_id"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="somefun"-->
<!--        android:textSize="18sp"-->
<!--        android:textColor="@color/material_dynamic_neutral50"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->

<!--        />-->
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:paddingStart="16dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingEnd="24dp"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/date_of_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="14sp"
        android:textColor="@color/material_dynamic_neutral50"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/sport_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="15dp"
        android:text="SPORTS"
        android:background="@drawable/card_title_bg"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintTop_toBottomOf="@id/date_of_activity"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:text="@string/title1"
        android:ellipsize="end"
        android:maxLines="1"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sport_name"
        />
<!--    <TextView-->
<!--        android:id="@+id/host"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="host"-->
<!--        android:textColor="@color/material_dynamic_neutral50"-->
<!--        android:textSize="16sp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/title"-->
<!--        android:layout_marginTop=".5dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"/>-->
    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location1"
        android:textSize="16sp"
        android:textColor="@color/material_dynamic_neutral50"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="1dp"
        android:layout_marginStart="3dp"
        app:layout_constraintStart_toEndOf="@id/pinIcon"
        />
    <TextView
        android:id="@+id/vacant_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="vacant : "
        app:layout_constraintTop_toTopOf="@id/vacant"
        app:layout_constraintBottom_toBottomOf="@id/vacant"
        app:layout_constraintEnd_toStartOf="@id/vacant"

        />
    <TextView
        android:id="@+id/vacant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="12"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="@id/location"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <ImageView
        android:id="@+id/pinIcon"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/ic_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/location"
        app:layout_constraintBottom_toBottomOf="@id/location"
        />


</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>